# name-classification-using-rnn

./: .gitignore  README.md  pyproject.toml  rnn.py  test.ipynb
