[tool.poetry]
name = "multilabel-text-classfication"
version = "0.1.0"
description = ""
authors = ["yugant10-commits <yugantghimire12345@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
Sphinx = "^5.1.1"
coverage = "^6.4.3"
flake8 = "^5.0.4"
pandas = "^1.4.3"
numpy = "^1.23.2"
transformers = "^4.21.1"
torch = "^1.12.1"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
